fixed offers section nav bug, fixed burgerIcon visibility

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,7 +30,7 @@ body {
 	background: none;
 	border: 1px solid transparent;
 	cursor: pointer;
-	z-index: 5;
+	z-index: 15;
 
 	&:focus {
 		outline: none;
@@ -84,7 +84,7 @@ body {
 	transform: translateX(100%);
 	transition: transform 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 	background-image: colors.$blue-gradient-solid;
-	z-index: 1;
+	z-index: 10;
 
 	&--active {
 		transform: translateX(0);
@@ -391,7 +391,7 @@ body {
 		&-info {
 			padding: 2em;
 			background-color: colors.$pure-white;
-			z-index: 10;
+			z-index: 1;
 		}
 
 		&-heading {
